--- a/sdk_appsrc/Zedboard_DMA/.cproject
+++ b/sdk_appsrc/Zedboard_DMA/.cproject
@@ -52,9 +52,10 @@
                                 <option id="xilinx.gnu.compiler.option.debugging.level.1037153443" superClass="xilinx.gnu.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.c.debugging.level.max" valueType="enumerated"/>
                                 								
                                 <option id="xilinx.gnu.compiler.inferred.swplatform.includes.1263079385" superClass="xilinx.gnu.compiler.inferred.swplatform.includes" valueType="includePath">
-                                    									
+
                                     <listOptionValue builtIn="false" value="${resolvePlatformFile:project=Zedboard_DMA,fileType=bspInclude}"/>
-                                    								
+                                    <listOptionValue builtIn="false" value="${workspace_loc:/Zedboard_DMA/../Zedboard-DMA/ps7_cortexa9_0/standalone_domain/bsp/ps7_cortexa9_0/include}"/>
+
                                 </option>
                                 								
                                 <option id="xilinx.gnu.compiler.misc.other.505940569" superClass="xilinx.gnu.compiler.misc.other" value="-c -fmessage-length=0 -MT&quot;$@&quot; -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard" valueType="string"/>
@@ -70,9 +71,10 @@
                                 <option id="xilinx.gnu.compiler.option.debugging.level.1787601082" superClass="xilinx.gnu.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.c.debugging.level.max" valueType="enumerated"/>
                                 								
                                 <option id="xilinx.gnu.compiler.inferred.swplatform.includes.357396239" superClass="xilinx.gnu.compiler.inferred.swplatform.includes" valueType="includePath">
-                                    									
+
                                     <listOptionValue builtIn="false" value="${resolvePlatformFile:project=Zedboard_DMA,fileType=bspInclude}"/>
-                                    								
+                                    <listOptionValue builtIn="false" value="${workspace_loc:/Zedboard_DMA/../Zedboard-DMA/ps7_cortexa9_0/standalone_domain/bsp/ps7_cortexa9_0/include}"/>
+
                                 </option>
                                 							
                             </tool>
@@ -88,9 +90,9 @@
                                 </option>
                                 								
                                 <option id="xilinx.gnu.linker.inferred.swplatform.flags.353150983" superClass="xilinx.gnu.linker.inferred.swplatform.flags" valueType="libs">
-                                    									
-                                    <listOptionValue builtIn="false" value="-Wl,--start-group,-lxil,-lgcc,-lc,--end-group"/>
-                                    								
+
+                                    <listOptionValue builtIn="false" value="-Wl,--start-group,-lxilffs,-lxil,-lgcc,-lc,-lm,--end-group"/>
+
                                 </option>
                                 								
                                 <option id="xilinx.gnu.c.linker.option.lscript.126681602" superClass="xilinx.gnu.c.linker.option.lscript" value="../src/lscript.ld" valueType="string"/>
@@ -119,7 +121,7 @@
                                 								
                                 <option id="xilinx.gnu.linker.inferred.swplatform.flags.1556011886" superClass="xilinx.gnu.linker.inferred.swplatform.flags" valueType="libs">
                                     									
-                                    <listOptionValue builtIn="false" value="-Wl,--start-group,-lxil,-lgcc,-lc,--end-group"/>
+                                    <listOptionValue builtIn="false" value="-Wl,--start-group,-lxil,-lgcc,-lc,-lm,--end-group"/>
                                     								
                                 </option>
                                 								
@@ -196,9 +198,10 @@
                                 <option id="xilinx.gnu.compiler.option.debugging.level.328338301" superClass="xilinx.gnu.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.c.debugging.level.none" valueType="enumerated"/>
                                 								
                                 <option id="xilinx.gnu.compiler.inferred.swplatform.includes.1761629596" superClass="xilinx.gnu.compiler.inferred.swplatform.includes" valueType="includePath">
-                                    									
+
                                     <listOptionValue builtIn="false" value="${resolvePlatformFile:project=Zedboard_DMA,fileType=bspInclude}"/>
-                                    								
+                                    <listOptionValue builtIn="false" value="${workspace_loc:/Zedboard_DMA/../Zedboard-DMA/ps7_cortexa9_0/standalone_domain/bsp/ps7_cortexa9_0/include}"/>
+
                                 </option>
                                 								
                                 <option id="xilinx.gnu.compiler.misc.other.1668410112" superClass="xilinx.gnu.compiler.misc.other" value="-c -fmessage-length=0 -MT&quot;$@&quot; -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard" valueType="string"/>
@@ -214,9 +217,10 @@
                                 <option id="xilinx.gnu.compiler.option.debugging.level.1173519283" superClass="xilinx.gnu.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.c.debugging.level.none" valueType="enumerated"/>
                                 								
                                 <option id="xilinx.gnu.compiler.inferred.swplatform.includes.1485936963" superClass="xilinx.gnu.compiler.inferred.swplatform.includes" valueType="includePath">
-                                    									
+
                                     <listOptionValue builtIn="false" value="${resolvePlatformFile:project=Zedboard_DMA,fileType=bspInclude}"/>
-                                    								
+                                    <listOptionValue builtIn="false" value="${workspace_loc:/Zedboard_DMA/../Zedboard-DMA/ps7_cortexa9_0/standalone_domain/bsp/ps7_cortexa9_0/include}"/>
+
                                 </option>
                                 							
                             </tool>
@@ -232,9 +236,9 @@
                                 </option>
                                 								
                                 <option id="xilinx.gnu.linker.inferred.swplatform.flags.1138090711" superClass="xilinx.gnu.linker.inferred.swplatform.flags" valueType="libs">
-                                    									
-                                    <listOptionValue builtIn="false" value="-Wl,--start-group,-lxil,-lgcc,-lc,--end-group"/>
-                                    								
+
+                                    <listOptionValue builtIn="false" value="-Wl,--start-group,-lxilffs,-lxil,-lgcc,-lc,-lm,--end-group"/>
+
                                 </option>
                                 								
                                 <option id="xilinx.gnu.c.linker.option.lscript.1109964292" superClass="xilinx.gnu.c.linker.option.lscript" value="../src/lscript.ld" valueType="string"/>
@@ -262,9 +266,9 @@
                                 </option>
                                 								
                                 <option id="xilinx.gnu.linker.inferred.swplatform.flags.1771272626" superClass="xilinx.gnu.linker.inferred.swplatform.flags" valueType="libs">
-                                    									
-                                    <listOptionValue builtIn="false" value="-Wl,--start-group,-lxil,-lgcc,-lc,--end-group"/>
-                                    								
+
+                                    <listOptionValue builtIn="false" value="-Wl,--start-group,-lxilffs,-lxil,-lgcc,-lc,-lm,--end-group"/>
+
                                 </option>
                                 								
                                 <option id="xilinx.gnu.c.linker.option.lscript.2075549747" superClass="xilinx.gnu.c.linker.option.lscript" value="../src/lscript.ld" valueType="string"/>
